// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-grid renders as container 1`] = `
<ecl-grid class="ecl-container" container="" style="display: block;">
  <!---->
  <div>
    Content inside container
  </div>
</ecl-grid>
`;

exports[`ecl-grid renders as row container 1`] = `
<ecl-grid class="ecl-row" row="">
  <!---->
  <ecl-grid class="ecl-col-6" columns="6">
    <!---->
    Column 1
  </ecl-grid>
  <ecl-grid class="ecl-col-6" columns="6">
    <!---->
    Column 2
  </ecl-grid>
</ecl-grid>
`;

exports[`ecl-grid renders with basic column configuration 1`] = `
<ecl-grid class="ecl-col-6" columns="6">
  <!---->
  Content in 6 columns
</ecl-grid>
`;

exports[`ecl-grid renders with breakpoint and columns (backward compatibility) 1`] = `
<ecl-grid breakpoint="m" class="ecl-col-m-6" columns="6">
  <!---->
  Content in 6 columns on md
</ecl-grid>
`;

exports[`ecl-grid renders with responsive columns (new API) 1`] = `
<ecl-grid class="ecl-col-l-4 ecl-col-m-6 ecl-col-s-12 ecl-col-xl-3" columns="{&quot;s&quot;: 12, &quot;m&quot;: 6, &quot;l&quot;: 4, &quot;xl&quot;: 3}">
  <!---->
  Responsive grid item
</ecl-grid>
`;

exports[`ecl-grid renders with responsive columns and style class 1`] = `
<ecl-grid class="ecl-col-l-3 ecl-col-m-6 ecl-col-s-12 ecl-u-p-m" columns="{&quot;s&quot;: 12, &quot;m&quot;: 6, &quot;l&quot;: 3}" style-class="ecl-u-p-m">
  <!---->
  Content with padding
</ecl-grid>
`;
